# discogameengine

./: .gitignore  CMakeLists.txt  README.md
content/logs/: log.txt
content/models/: Turret.ply  capsule.ply  cube.ply  cylinder.ply  earth.ply  plane_floor.ply  portal.ply  portal_cube.ply
content/models/FBX/: chan-push-forward.fbx  chan-run-forward.fbx  chan-run-jump.fbx  chan-spell-strafe-left.fbx  chan-spell-strafe-right.fbx  chan-strafe-left.fbx  chan-strafe-right.fbx
content/scenes/: box.json  physics.json  scene.json
content/shaders/: Cbuffer.hlsl  Common.hlsl  Default.hlslinc  GBufferInput.hlsl  GBufferPass.hlsl  IBLPass.hlsl  LightPass.hlsl  ShadowMapPass.hlsl  SkinnedMeshVertexType.hlsl  Skybox.hlsl  StaticMeshVertexType.hlsl  UserTest.hlslinc  main.backup  main.hlsl  quad.hlsl  static_mesh.hlsl
content/shaders/cubemap/: VSToPS.hlsl  cubemap.hlsl  irradiance_convolution.hlsl  prefilter.hlsl
content/skinned_mesh/: chan.skinnedmeshjson
src/: CMakeLists.txt
src/engine/: CMakeLists.txt  WinMain.cpp  main.cpp
src/engine/app/: CMakeLists.txt
src/engine/app/include/app/: app.h
src/engine/app/src/: app.cpp
src/engine/asset/: CMakeLists.txt
src/engine/asset/include/asset/: asset.h  environment_map_factory.h  factory.h  registry.h  shader_factory.h  skinned_mesh_factory.h  static_mesh_factory.h  texture2d_factory.h  texturecube_factory.h
src/engine/asset/src/: asset.cpp  environment_map_factory.cpp  factory.cpp  shader_factory.cpp  skinned_mesh_factory.cpp  static_mesh_factory.cpp  texture2d_factory.cpp  texturecube_factory.cpp
src/engine/behavior/: CMakeLists.txt
src/engine/behavior/include/behavior/: behavior.h  first_person_controller.h  physics.h
src/engine/behavior/src/: behavior.cpp  first_person_controller.cpp  physics.cpp
src/engine/component/: CMakeLists.txt
src/engine/component/include/component/: component.h  registry.h
src/engine/component/src/: component.cpp  component_actions.cpp  registry.cpp
src/engine/config/: CMakeLists.txt  config.h.in  shader_target.h.in
src/engine/core/: CMakeLists.txt
src/engine/core/include/: engine
src/engine/core/include/core/: archive.h  blob.h  guid.h  log.h  queue.h  typedefs.h
src/engine/core/include/core/math/: box.h  color.h  math.h
src/engine/core/src/: archive.cpp  color.cpp  guid.cpp  log.cpp  queue.cpp
src/engine/game/: CMakeLists.txt
src/engine/game/include/game/: animation_component.h  camera_component.h  debug_component.h  light_component.h  material_component.h  metadata_component.h  player_component.h  primitive_component.h  rigid_body_component.h  skinned_mesh_component.h  static_mesh_component.h  transform_component.h
src/engine/game/src/: game_component.cpp  transform_component.cpp
src/engine/interfaces/: CMakeLists.txt
src/engine/interfaces/graphicsinterface/: CMakeLists.txt
src/engine/interfaces/graphicsinterface/include/graphicsinterface/: buffer.h  graphicsinterface.h  pixel_format.h  shader.h
src/engine/interfaces/input/: CMakeLists.txt
src/engine/interfaces/input/include/input/: input.h
src/engine/interfaces/window/: CMakeLists.txt
src/engine/interfaces/window/include/window/: window.h
src/engine/legacy/: CMakeLists.txt
src/engine/legacy/include/legacy/: sceneloader.h  sceneloader2.h
src/engine/legacy/src/: sceneloader.cpp  sceneloader2.cpp
src/engine/platform/: CMakeLists.txt
src/engine/platform/d3d11i/: CMakeLists.txt
src/engine/platform/d3d11i/include/d3d11i/: d3d11i.h  d3dishader.h
src/engine/platform/d3d11i/src/: blending_state.cpp  d3d11i.cpp  d3dbuffer.cpp  debug.cpp  render_target.cpp  rendering.cpp  shader_compilation.cpp  texturecube.cpp
src/engine/platform/ntwindow/: CMakeLists.txt
src/engine/platform/ntwindow/include/ntwindow/: game_timer.h  ntwindow.h
src/engine/platform/ntwindow/src/: game_timer.cpp  nt_init.cpp  ntwindow.cpp
src/engine/platform/opengli/: CMakeLists.txt
src/engine/platform/opengli/include/opengli/: buffer.h  opengli.h
src/engine/platform/opengli/src/: buffer.cpp  opengli_win.cpp
src/engine/renderer/: CMakeLists.txt
src/engine/renderer/include/renderer/: gbuffer.h  mesh_render_data.h  post_processing.h  procedural_geo.h  rendercore.h  renderer.h  resource.h  screen_space_quad.h
src/engine/renderer/src/: gbuffer.cpp  post_processing.cpp  procedural_geo.cpp  rendercore.cpp  renderer.cpp  screen_space_quad.cpp
src/engine/runtime/: CMakeLists.txt
src/engine/runtime/include/runtime/: animation.h  environment_map.h  environment_map_data.h  environment_map_resource.h  mesh.h  renderable.h  skinned_mesh.h  static_mesh.h  static_mesh_resource.h  texture.h  texture2d.h  texture2d_resource.h  texturecube.h  texturecube_resource.h
src/engine/runtime/src/: animation.cpp  environment_map.cpp  environment_map_resource.cpp  skinned_mesh.cpp  static_mesh.cpp  texture2d.cpp  texture2d_resource.cpp  texturecube.cpp  texturecube_resource.cpp
src/engine/shader/: CMakeLists.txt
src/engine/shader/cross/: CMakeLists.txt
src/engine/shader/cross/include/cross/: cross.h
src/engine/shader/cross/src/: cross.cpp
src/engine/shader/preprocessor/: CMakeLists.txt
src/engine/shader/preprocessor/include/preprocessor/: preprocessor.h
src/engine/shader/preprocessor/src/: preprocessor.cpp
src/engine/shader/shader/: CMakeLists.txt
src/engine/shader/shader/include/shader/: cache.h  compiler.h  shader.h  uniform_buffer.h
src/engine/shader/shader/src/: cache.cpp  shader.cpp  uniform_buffer.cpp
src/engine/task/: CMakeLists.txt
src/engine/task/include/task/: bone_transform_task.h  task.h  transform_task.h
src/engine/task/src/: bone_transform_task.cpp  transform_task.cpp
src/engine/utils/: CMakeLists.txt
src/engine/utils/include/utils/: fs.h  helpers.h  map.h  math.h  path.h  string.h
src/engine/utils/src/: fs.cpp  helpers.cpp  math.cpp  path.cpp
src/programs/: CMakeLists.txt
src/programs/iblmaker/: CMakeLists.txt
src/programs/iblmaker/include/: cubemap_builder.h  rendering_utils.h  shaders.h
src/programs/iblmaker/src/: cubemap_builder.cpp  main.cpp  rendering_utils.cpp
(+13 files in other folders)
